************************ H E A D E R *************************
CHANGELOG created from git - do not change these hesder lines!
Last commit: 74f7325560b6832bec4c9de0eac4ce48dd229c40
********************* E N D  H E A D E R *********************

20170912:
    control.c: switched to buffer
    qlibs: switched to error.a
    switched to qlibs: strerr.a
    switched to qlibs: getopt
    removed static qlibs, switched to uint_t.h, temoved tai.h, taia.h
20170911:
    consolidated dateime_un.c into datetime.c
    switched to qlibs: ndelay.a; a bit Makefile clean up
    removed files gen_alloc.h, gen_allocdef.h (used stralloc.h instead)
    switched to qlibs: getln.a
    switched to qlibs: open.a
    switched to qlibs: pathexec.o
    switched to qlibs: env.a
    switched to qlibs: lock.a, removed obsolete tryshsgr.c
    switched to qlibs: substdio, removed scan_* functions
    removed findsystype, removed fmt_* functions
    removed obsoleted auto-*.c files
    removed chkspawn.c, code clean up
    extended configure process
20170910:
    moved to qlibs/fd.a
20170828:
    switched to qlibs: sig, str, stralloc
20170826:
    switched to qlibs: wait.a, case.a, sig.a
20170824:
    cast of some pointers
20170823:
    removed 'alloc'
20170821:
    removed 'fork.h'
    removed deprechated 'vfork'
    removed check 'try direntry'
    removred 'byte.h'
20170817:
    initial version which compiles
20170814:
    removed qbiff.c
    reworked TARGETS file
    update qlibs
    cleanup structure, new base s/qmail-3.3.10
20170501:
    Fixed qmail-smtpd (badmailfrom); updated qmail-remote (addrmangle)
20170430:
    update code to s/qmail-3.2.20 src
20170326:
    Merge pull request #2 from kp-org/dev-kp
    Added 'qlibs' into master branch
    Merge branch 'dev-kp' of https://github.com/kp-org/aQmail into dev-kp
    qlibs: updated to version 20170326
    qlibs: updated to version 20170326
20170323:
    updated qlibs (20170323)
20170321:
    added 'qlibs'
20170319: