@@ -1,0 +1,20 @@
+ISC License (ISC)
+
+Copyright ©2017 Erwin Hofmann <feh@fehcom.de>, Kai Peter <kp@aqmail.org>
+
+Permission to use, copy, modify, and/or distribute this software for any
+purpose with or without  fee is hereby granted,  provided that the above
+copyright notice and this permission notice appear in all copies.
+
+THE SOFTWARE IS PROVIDED "AS IS" AND THE AUTHOR DISCLAIMS ALL WARRANTIES
+WITH REGARD TO THIS SOFTWARE INCLUDING ALL IMPLIED WARRANTIES OF FITNESS
+AND  MERCHANTABILITY.  IN NO  EVENT  SHALL  THE AUTHOR BE LIABLE FOR ANY
+SPECIAL,  DIRECT,  INDIRECT,  OR CONSEQUENTIAL  DAMAGES  OR  ANY DAMAGES
+WHATSOEVER RESULTING  FROM LOSS OF USE,  DATA OR PROFITS,  WHETHER IN AN
+ACTION OF CONTRACT,  NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
+OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
+
+
+Any included code with a different license  remains under their original
+license. This is documented in seperate LICENSE files or inside the ori-
+ginal code.
