@@ -1,12 +1,18 @@
-//#include "fork.h"
+/*
+ *  Revision 20160711, Kai Peter
+ *  - switched to 'buffer' (in 'strerr')
+ *  Revision 20160503, Kai Peter
+ *  - changed return type of main to int
+ *  - added 'unistd.h' to prevent compiler warnings, removed 'exit.h'
+ */
+#include <unistd.h>
 #include "strerr.h"
 #include "wait.h"
 #include "error.h"
-#include "exit.h"
 
-#define FATAL "except: fatal: "
+#define FATL "except: fatal: "
 
-int main(int argc, char **argv)
+int main(int argc,char **argv)
 {
   int pid;
   int wstat;
@@ -16,7 +22,7 @@ int main(int argc, char **argv)
 
   pid = fork();
   if (pid == -1)
-    strerr_die2sys(111,FATAL,"unable to fork: ");
+    strerr_die2sys(111,FATL,"unable to fork: ");
   if (pid == 0) {
     execvp(argv[1],argv + 1);
     if (error_temp(errno)) _exit(111);
@@ -24,12 +30,13 @@ int main(int argc, char **argv)
   }
 
   if (wait_pid(&wstat,pid) == -1)
-    strerr_die2x(111,FATAL,"wait failed");
+    strerr_die2x(111,FATL,"wait failed");
   if (wait_crashed(wstat))
-    strerr_die2x(111,FATAL,"child crashed");
+    strerr_die2x(111,FATL,"child crashed");
   switch(wait_exitcode(wstat)) {
     case 0: _exit(100);
-    case 111: strerr_die2x(111,FATAL,"temporary child error");
+    case 111: strerr_die2x(111,FATL,"temporary child error");
     default: _exit(0);
   }
+  return(0);  /* never reached */
 }
